--- a/TicTacToeGame/build.gradle
+++ b/TicTacToeGame/build.gradle
@@ -10,7 +10,7 @@ javafx {
 
 group 'com.kodilla'
 version '1.0-SNAPSHOT'
-mainClassName = 'MySimpleGameForKodilla'
+mainClassName = 'TicTacToeGame'
 
 repositories {
     mavenCentral()
